[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/images/scenes/zen_mode/4_perfect_fourth/stripe_no_glow.png" type="Texture" id=1]
[ext_resource path="res://scenes/headers/header.gd" type="Script" id=2]
[ext_resource path="res://assets/images/scenes/zen_mode/1_main/stripe.png" type="Texture" id=3]
[ext_resource path="res://assets/images/scenes/zen_mode/2_major_second/stripe.png" type="Texture" id=4]
[ext_resource path="res://assets/images/scenes/zen_mode/4_perfect_fourth/stripe.png" type="Texture" id=5]
[ext_resource path="res://assets/images/scenes/zen_mode/1_main/header_no_stripe.png" type="Texture" id=6]
[ext_resource path="res://assets/images/scenes/zen_mode/6_major_sixth/stripe_no_glow.png" type="Texture" id=7]
[ext_resource path="res://assets/images/scenes/zen_mode/6_major_sixth/stripe.png" type="Texture" id=8]
[ext_resource path="res://assets/images/scenes/zen_mode/5_perfect_fifth/stripe.png" type="Texture" id=9]
[ext_resource path="res://assets/images/scenes/zen_mode/5_perfect_fifth/stripe_no_glow.png" type="Texture" id=10]
[ext_resource path="res://assets/images/scenes/zen_mode/7_major_seventh/stripe_no_glow.png" type="Texture" id=11]
[ext_resource path="res://assets/images/scenes/zen_mode/8_octave/stripe_no_glow.png" type="Texture" id=12]
[ext_resource path="res://assets/images/scenes/zen_mode/8_octave/stripe.png" type="Texture" id=13]
[ext_resource path="res://assets/images/scenes/zen_mode/7_major_seventh/stripe.png" type="Texture" id=14]
[ext_resource path="res://assets/images/scenes/zen_mode/3_major_third/stripe_no_glow.png" type="Texture" id=15]
[ext_resource path="res://assets/images/scenes/zen_mode/3_major_third/stripe.png" type="Texture" id=16]
[ext_resource path="res://assets/images/scenes/zen_mode/2_major_second/stripe_no_glow.png" type="Texture" id=17]
[ext_resource path="res://assets/images/scenes/interval_names/2/1.png" type="Texture" id=18]
[ext_resource path="res://assets/images/scenes/interval_names/3/1.png" type="Texture" id=19]
[ext_resource path="res://assets/images/scenes/interval_names/8/1.png" type="Texture" id=20]
[ext_resource path="res://assets/images/scenes/interval_names/4/1.png" type="Texture" id=21]
[ext_resource path="res://assets/images/scenes/interval_names/5/1.png" type="Texture" id=22]
[ext_resource path="res://assets/images/scenes/interval_names/6/1.png" type="Texture" id=23]
[ext_resource path="res://assets/images/scenes/interval_names/7/1.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "6_major_sixth",
"speed": 2.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "8_octave",
"speed": 2.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 4 ) ],
"loop": true,
"name": "2_major_second",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "1_main",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "5_perfect_fifth",
"speed": 2.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "3_major_third",
"speed": 2.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "7_major_seventh",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "4_perfect_fourth",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 23 ) ],
"loop": true,
"name": "6_major_sixth",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": true,
"name": "8_octave",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ) ],
"loop": true,
"name": "2_major_second",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "1_main",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ) ],
"loop": true,
"name": "5_perfect_fifth",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ) ],
"loop": true,
"name": "3_major_third",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ), ExtResource( 24 ) ],
"loop": true,
"name": "7_major_seventh",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ) ],
"loop": true,
"name": "4_perfect_fourth",
"speed": 10.0
} ]

[node name="header" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 959.0 ]
}

[node name="header_button" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stripe" type="AnimatedSprite" parent="."]
position = Vector2( 961.235, 542.353 )
scale = Vector2( 1.00288, 1 )
frames = SubResource( 1 )
animation = "1_main"

[node name="name" type="AnimatedSprite" parent="."]
position = Vector2( 961, 556 )
frames = SubResource( 2 )
animation = "2_major_second"

[connection signal="pressed" from="header_button" to="." method="_on_header_pressed"]
[connection signal="animation_finished" from="name" to="." method="_on_name_animation_finished"]
